# BrowserDecrypt

./: Cargo.toml  readme.md
src/: browser.rs  constants.rs  main.rs
